# quant-iq-vision-08

./: .gitignore  README.md  Website UI Changes.md  choreo_readme  index.html  package-lock.json  package.json  pyrightconfig.json  start-backend.sh  start-dev.bat  start-dev.sh  vite.config.ts
backend/: README.md  backtester.py  black_litterman_optimizer.py  eft_optimizer.py  env.example  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
src/: App.css  App.tsx  index.css
src/components/: ApiTest.tsx  CTASection.tsx  FeatureCards.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  ManualEntryModal.tsx  MetricsCard.tsx  PortfolioOverview.tsx  QuickStats.tsx  StatsSection.tsx  UploadModal.tsx  WelcomeSection.tsx
src/components/portfolio/: BlackLittermanCharts.tsx  ComparisonCharts.tsx  EfficientFrontierChart.tsx  HestonDistributionChart.tsx  HestonPathsChart.tsx  MetricsTable.tsx  MinVolatilityChart.tsx  MonteCarloTab.tsx  PortfolioResults.tsx  RiskGauge.tsx  WeightsPieChart.tsx
src/components/tabs/: AnalyzerTab.tsx  BlackLittermanTab.tsx  DashboardTab.tsx  EfficientFrontierTab.tsx  GuideTab.tsx  HestonSimulatorTab.tsx  OptimizerTab.tsx  SimulatorTab.tsx
src/components/ui/: button.tsx  chart.tsx  feature-square.tsx
src/contexts/: PortfolioContext.tsx
src/pages/: Index.tsx
src/services/: api.ts
src/utils/: marketDataService.ts  portfolioOptimizer.ts  statisticsEngine.ts
